--- a/Styles/style.css
+++ b/Styles/style.css
@@ -99,6 +99,8 @@ body {
 }
 
 .tituloPrincipal {
+    text-shadow: 0px 2px 4px black;
+    color: rgb(171, 179, 185);
     position: absolute;
     left: 20px;
     top: 20px;
